chore: jwt bearer token on swagger
