# docs/swagger.json
@@ -19,6 +19,11 @@
     "paths": {
         "/cancel-subscription/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Cancel a subscription to an event",
                 "consumes": [
                     "application/json"
@@ -70,6 +75,11 @@
         },
         "/confirm-subscription/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Confirm a subscription to an event",
                 "consumes": [
                     "application/json"
@@ -135,6 +145,11 @@
         },
         "/confirmation-code/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get a confirmation code for an event",
                 "consumes": [
                     "application/json"
@@ -186,6 +201,11 @@
         },
         "/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create an event",
                 "consumes": [
                     "multipart/form-data"
@@ -256,6 +276,11 @@
         },
         "/subscribe/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Subscribe to an event",
                 "consumes": [
                     "application/json"
@@ -370,6 +395,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
